# RobotSystem-Lite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/actuator/: accel_actuator.json  actuator_1.json  actuator_2.json  anklebot_linear_left.json~  anklebot_linear_right.json  anklebot_linear_right.json~  hd_joint_actuator.json  opensim_virtual_actuator_1.json  simple_joint_actuator.json  virtual_actuator.json
config/actuator/opensim/: actuator_2.json
config/actuators/: accel_actuator.json  actuator_1.json  actuator_2.json  anklebot_linear_left.json  anklebot_linear_left.json~  anklebot_linear_right.json  anklebot_linear_right.json~  hd_joint_actuator.json  simple_joint_actuator.json  virtual_actuator.json
config/actuators/opensim/: actuator_1.json
config/curves/: knee_sit_position.json  knee_walk_position.json  knee_walk_stiffness.json  spring104_interaction_torque.json
config/emg_models/: curves-bak.json  curves.json  knee.json  rna-bak2.json  rna.json
config/joints/: knee.json  simple_joint_actuator.json
config/motor/: anklebot_left_motor.json  anklebot_left_motor.json~  anklebot_right_motor.json  anklebot_right_motor.json~  hd_joint_motor_position.json  hd_joint_motor_velocity.json  motor_1_force.json  motor_1_position.json  motor_2_force.json  motor_2_position.json  opensim_virtual_motor_1.json  simple_joint_motor.json  virtual_motor.json
config/motors/: anklebot_left_motor.json~  anklebot_right_motor.json  anklebot_right_motor.json~  hd_joint_motor_position.json  hd_joint_motor_pulse100.json  hd_joint_motor_velocity.json  motor_1_force.json  motor_2_position.json  simple_joint_motor.json  virtual_motor.json
config/muscles/: bisceps_femoris.json  rectus_femoris.json  semitendinoso.json  vastus_laterais.json  vastus_medialis.json
config/robot/: anklebot.json  emg_control.json  emg_rna_control.json  hd_joint.json  open_sim_model.json  opensim_dual_motors.json  opensim_virtual_robot.json  osim-dual_motor.json  right_knee_joint.osim  simple_joint.json  test_model.osim  virtual_robot.json
config/robots/: accel_robot.json  anklebot.json  dual_motors.json  open_sim_model.json  osim-knee_joint.json  osim-robot_arm.osim  osim-virtual_robot.json  test_model.osim  virtual_robot.json
config/sensor/: accel_position_sensor.json  anklebot_left_force.json  anklebot_left_force.json~  anklebot_left_position.json  anklebot_left_position.json~  anklebot_right_force.json  anklebot_right_force.json~  anklebot_right_position.json  hd_joint_sensor_motor.json  hd_joint_sensor_position.json  hd_joint_sensor_torque.json  opensim_virtual_position_1.json  sensor_position_1.json  sensor_position_2.json  sensor_torque_1.json  sensor_torque_2.json  sensor_velocity_1.json  sensor_velocity_2 .json  sensor_velocity_2.json  simple_joint_sensor_motor.json  simple_joint_sensor_torque-bak.json  simple_joint_sensor_torque.json  simple_joint_sensor_velocity.json  virtual_sensor_force.json  virtual_sensor_position.json  virtual_sensor_velocity.json
config/sensors/: accel_sensor.json  anklebot_left_force.json  anklebot_left_force.json~  anklebot_left_position.json~  anklebot_right_force.json~  anklebot_right_position.json  hd_joint_sensor_motor.json  hd_joint_sensor_position.json  hd_joint_sensor_torque.json  hd_joint_sensor_velocity.json  sensor_torque_1.json  sensor_velocity_1.json  simple_joint_sensor_motor.json  simple_joint_sensor_position.json  simple_joint_sensor_torque.json  simple_joint_sensor_velocity.json  spring104_interaction_torque.json  virtual_sensor_force.json
cvibuild.DualMotorControl/Debug/: Jamfile  Jamfile_instr
cvibuild.DualMotorControl/Release/: Jamfile  Jamfile_instr
cvibuild.NICANEPOSPlugin/Release/: Jamfile  Jamfile_instr
cvibuild.NIDAQmxPlugin/Release/: Jamfile  Jamfile_instr
docs/: Doxyfile  actuator_8h.html  actuator_8h.js  actuator_8h_source.html  actuator_config.html  actuators_8h.html  actuators_8h_source.html  annotated.html  annotated_dup.js  classes.html  config__keys_8h_source.html  curve__loader_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  input_8h.html  input_8h.js  input_8h_source.html  menudata.js  motor_8h.html  motor_8h.js  motor_8h_source.html  motor_config.html  motors_8h.html  motors_8h_source.html  navtreedata.js  navtreeindex0.js  output_8h.html  output_8h.js  output_8h_source.html  pages.html  robot_8h.html  (+23 more)
docs/img/: .directory
docs/mardown/: Building.md  Clients-Messaging-Format.md  Control-Variables-Convention.md  Home.md  RobRehabControl.md  RobRehabServer.md  configuration_levels.md  joint_axis_rationale.md
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js  typedefs_0.js  (+4 more)
src/: .directory  actuator.c  actuator.h  actuator_control_interface.h  actuators.c  actuators.h  config_keys.h  curve_loader.c  curve_loader.h  data_io.c  data_io.h  input.c  input.h  ipc.c  ipc.h  main.c  main_ets.c  main_xenomai.c  motor.c  motor.h  motors.c  motors.h  output.c  output.h  robot.c  robot.h  robot_control_interface.h  robots.c  robots.h  robrehab_network.c  sensor.c  sensor.h  sensors.c  sensors.h  shared_axis_data.h  shared_dof_variables.h  shared_joint_data.h  shared_robot_control.h  signal_io_interface.h  system.c  (+1 more)
src/actuator_control/: dummy.c  force_pi_control.c  force_pi_control_filter.c  fuzzy_force.c  interface.h
src/function_loader/: README.md
src/robot_control/: anklebot.c  dummy.c  interface.h  simple_joint.c
src/signal_io/: dummy.c  interface.h
(+46 files in other folders)
